--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>amal-realestate</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10782053895"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'AW-10782053895');
+    </script>
   </head>
   <body>
     <div id="root"></div>
