--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>amal-realestate</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' https://www.googletagmanager.com https://www.googleadservices.com; img-src 'self' https://www.google-analytics.com https://www.google.com; connect-src 'self' https://www.google-analytics.com;">
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10782053895"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
